--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -255,6 +255,7 @@
     <Compile Include="Areas\Compras\Controllers\CompradorController.cs" />
     <Compile Include="Areas\Compras\Controllers\DepartamentoComprasController.cs" />
     <Compile Include="Areas\Compras\Controllers\EstadoCierreComprasController.cs" />
+    <Compile Include="Areas\Compras\Controllers\MotivoCompraController.cs" />
     <Compile Include="Areas\Compras\Controllers\OrdenCompraLocalController.cs" />
     <Compile Include="Areas\Compras\Controllers\ParametrosComprasController.cs" />
     <Compile Include="Areas\Compras\Controllers\TerminoPagoComprasController.cs" />
@@ -9062,6 +9063,7 @@
     <Content Include="Areas\Compras\Views\OrdenCompraLocal\Nuevo.cshtml" />
     <Content Include="Areas\Compras\Views\OrdenCompraLocal\Modificar.cshtml" />
     <Content Include="Areas\Compras\Views\OrdenCompraLocal\Anular.cshtml" />
+    <Content Include="Areas\Compras\Views\MotivoCompra\Index.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
