--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -181,6 +181,7 @@
     <Compile Include="Compras\com_comprador_Data.cs" />
     <Compile Include="Compras\com_departamento_Data.cs" />
     <Compile Include="Compras\com_estado_cierre_Data.cs" />
+    <Compile Include="Compras\com_Motivo_Orden_Compra_Data.cs" />
     <Compile Include="Compras\com_ordencompra_local_Data.cs" />
     <Compile Include="Compras\com_parametro_Data.cs" />
     <Compile Include="Compras\com_TerminoPago_Data.cs" />
@@ -197,6 +198,9 @@
       <DependentUpon>Model_compras.tt</DependentUpon>
     </Compile>
     <Compile Include="com_estado_cierre.cs">
+      <DependentUpon>Model_compras.tt</DependentUpon>
+    </Compile>
+    <Compile Include="com_Motivo_Orden_Compra.cs">
       <DependentUpon>Model_compras.tt</DependentUpon>
     </Compile>
     <Compile Include="com_ordencompra_local.cs">
