--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Compras\com_comprador_Info.cs" />
     <Compile Include="Compras\com_departamento_Info.cs" />
     <Compile Include="Compras\com_estado_cierre_Info.cs" />
+    <Compile Include="Compras\com_Motivo_Orden_Compra_Info.cs" />
     <Compile Include="Compras\com_ordencompra_local_Info.cs" />
     <Compile Include="Compras\com_parametro_Info.cs" />
     <Compile Include="Compras\com_TerminoPago_Info.cs" />
