--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Compras\com_estado_cierre_Bus.cs" />
     <Compile Include="Compras\com_Motivo_Orden_Compra_Bus.cs" />
     <Compile Include="Compras\com_ordencompra_local_Bus.cs" />
+    <Compile Include="Compras\com_ordencompra_local_det_Bus.cs" />
     <Compile Include="Compras\com_parametro_Bus.cs" />
     <Compile Include="Compras\com_TerminoPago_Bus.cs" />
     <Compile Include="Contabilidad\ats_Bus.cs" />
