--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9077,8 +9077,7 @@
     <Content Include="Areas\Compras\Views\OrdenCompraLocal\_CmbProveedor_COM.cshtml" />
     <Content Include="Areas\Reportes\Views\InventarioReportes\INV_011.cshtml" />
     <Content Include="Areas\Compras\Views\Comprador\_CmbPersona_Compras.cshtml" />
-    <Content Include="Areas\Compras\Views\OrdenCompraLocal\_GridViewPartial_ordencompralocal_det.cshtml" />
-    <Content Include="Areas\Compras\Views\OrdenCompraLocal\_CmbProducto_Compras.cshtml" />
+    <Content Include="Areas\RRHH\Views\EmpleadoNovedad\_CmbEmpleado_novedades.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
