--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9079,6 +9079,7 @@
     <Content Include="Areas\Compras\Views\Comprador\_CmbPersona_Compras.cshtml" />
     <Content Include="Areas\RRHH\Views\EmpleadoNovedad\_CmbEmpleado_novedades.cshtml" />
     <Content Include="Areas\RRHH\Views\EmpleadoPorRubro\_CmbEmpleado_rubros_fijos.cshtml" />
+    <Content Include="Areas\RRHH\Views\EmpleadoRubroAcumulado\_CmbEmpleado_rubros_acumulados.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
