--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9081,6 +9081,11 @@
     <Content Include="Areas\Compras\Views\Comprador\_CmbPersona_Compras.cshtml" />
     <Content Include="Areas\RRHH\Views\EmpleadoPorRubro\_CmbEmpleado_rubros_fijos.cshtml" />
     <Content Include="Areas\RRHH\Views\EmpleadoRubroAcumulado\_CmbEmpleado_rubros_acumulados.cshtml" />
+    <Content Include="Areas\RRHH\Views\BaseImpuestoRenta\_GridViewPartial_base_impuesto_renta.cshtml" />
+    <Content Include="Areas\RRHH\Views\BaseImpuestoRenta\Anular.cshtml" />
+    <Content Include="Areas\RRHH\Views\BaseImpuestoRenta\Index.cshtml" />
+    <Content Include="Areas\RRHH\Views\BaseImpuestoRenta\Modificar.cshtml" />
+    <Content Include="Areas\RRHH\Views\BaseImpuestoRenta\Nuevo.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
@@ -9160,7 +9165,6 @@
     <Folder Include="Areas\Inventario\Models\" />
     <Folder Include="Areas\Reportes\Models\" />
     <Folder Include="Areas\RRHH\Models\" />
-    <Folder Include="Areas\RRHH\Views\BaseImpuestoRenta\" />
     <Folder Include="Areas\RRHH\Views\CapacitacionesEmpleado\" />
     <Folder Include="Areas\RRHH\Views\DocumentoEmpleado\" />
     <Folder Include="Areas\RRHH\Views\EmpleadoDocumento\" />
