--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1184,6 +1184,9 @@
     <Compile Include="ro_tabla_Impu_Renta.cs">
       <DependentUpon>Model_rrhh.tt</DependentUpon>
     </Compile>
+    <Compile Include="ro_tipo_gastos_personales.cs">
+      <DependentUpon>Model_rrhh.tt</DependentUpon>
+    </Compile>
     <Compile Include="ro_Tipo_Prestamo.cs">
       <DependentUpon>Model_rrhh.tt</DependentUpon>
     </Compile>
@@ -1243,6 +1246,7 @@
     <Compile Include="RRHH\ro_rubro_tipo_Data.cs" />
     <Compile Include="RRHH\ro_Solicitud_Vacaciones_x_empleado_Data.cs" />
     <Compile Include="RRHH\ro_tabla_Impu_Renta_Data.cs" />
+    <Compile Include="RRHH\ro_tipo_gastos_personales_Data.cs" />
     <Compile Include="RRHH\ro_tipo_prestamo_Data.cs" />
     <Compile Include="RRHH\ro_turno_Data.cs" />
     <Compile Include="SeguridadAcceso\seg_Menu_Data.cs" />
