--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -266,6 +266,7 @@
     <Compile Include="Reportes\Facturacion\FAC_008_Bus.cs" />
     <Compile Include="Reportes\Facturacion\FAC_008_aplicaciones_Bus.cs" />
     <Compile Include="Reportes\Facturacion\FAC_009_Bus.cs" />
+    <Compile Include="Reportes\Facturacion\FAC_010_Bus.cs" />
     <Compile Include="Reportes\Importacion\IMP_001_Bus.cs" />
     <Compile Include="Reportes\Importacion\IMP_002_Bus.cs" />
     <Compile Include="Reportes\Importacion\IMP_003_Bus.cs" />
