--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9125,6 +9125,7 @@
     <Content Include="Areas\RRHH\Views\Rdep\_GridViewPartial_rdep_det.cshtml" />
     <Content Include="Areas\RRHH\Views\Rdep\Index.cshtml" />
     <Content Include="Areas\RRHH\Views\Rdep\_CmbEmpleado_rdep.cshtml" />
+    <Content Include="Areas\Reportes\Views\InventarioReportes\INV_004.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
@@ -9239,6 +9240,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Reportes\ActivoFijo\ACTF_001_Rpt.resx">
       <DependentUpon>ACTF_001_Rpt.cs</DependentUpon>
     </EmbeddedResource>
