--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9127,6 +9127,7 @@
     <Content Include="Areas\Reportes\Views\InventarioReportes\INV_004.cshtml" />
     <Content Include="Areas\Reportes\Views\InventarioReportes\INV_012.cshtml" />
     <Content Include="Areas\Inventario\Views\Revision\Index.cshtml" />
+    <Content Include="Areas\Inventario\Views\Revision\_CmbProductoPadre_Revision.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
