--- a/ERP/Core.Erp.Web/Web.config
+++ b/ERP/Core.Erp.Web/Web.config
@@ -40,8 +40,10 @@
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
   <system.web>
-    <authentication mode="None" />
-    <sessionState timeout="60"></sessionState>
+    <sessionState mode="InProc" timeout="60" cookieless="false"></sessionState>
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Login"  timeout="60" />
+    </authentication>
     <compilation debug="true" targetFramework="4.5.2">
       <assemblies>
         <add assembly="DevExpress.Utils.v17.2, Version=17.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
